...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VmO-UQ-bPo">
                                <rect key="frame" x="147" y="264" width="81" height="30"/>
                                <state key="normal" title="ChangeText"/>
                                <connections>
                                    <action selector="changeMessage:" destination="dkx-z0-nzr" eventType="touchUpInside" id="guC-0n-Yb5"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xtm-Ba-s65">
                                <rect key="frame" x="0.0" y="213" width="375" height="30"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DST-fn-6gi">
                                <rect key="frame" x="154" y="311" width="67" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="67" id="jbH-9e-6Xq"/>
                                    <constraint firstAttribute="height" constant="30" id="scC-xV-Ykx"/>
                                </constraints>
                                <state key="normal" title="NextPage"/>
                                <connections>
                                    <action selector="Nestpage:" destination="dkx-z0-nzr" eventType="touchUpInside" id="uY0-E6-DIO"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
